--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc practice.ts && node practice.js"
+    "start": "npx tsc practice2.ts && node practice2.js"
   },
   "repository": {
     "type": "git",
